--- a/main.html
+++ b/main.html
@@ -8,6 +8,43 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<label for="name">Name*</label>
+		<input type="text" id="#name"><br><br>
+
+		<label for="email">Email*</label>
+		<input type="email" id="#email"><br>
+
+		<p>Gender*
+		<label for="gender"><input type="radio" id="#gender_m" name="gender">Male</label>
+		<label for="gender"><input type="radio" id="#gender_f" name="gender">Female</label>
+		</p>
+
+		<label>Laptop Brands</label>
+		<select id="#laptop">
+			<option value="apple">Apple</option>
+			<option value="asus">Asus</option>
+			<option value="hp">HP</option>
+			
+		</select><br><br>
+
+		<label>Age*</label>
+		<input type="number" id="#age"><br><br>
+
+		<label>DOB*</label>
+		<input type="date" id="#dob"><br><br>
+		
+		<label>Password*</label>
+		<input type="password" id="#password"><br><br>
+
+		<input type="url" id="portfolio"><br><br>
+
+		<button type="button">Submit</button>
+		
+	</form>
+	
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
