--- a/main.html
+++ b/main.html
@@ -10,17 +10,17 @@
 	<!-- the entire body must be written by student -->
 	<form method="post">
 		<label for="name">Name*</label>
-		<input type="text" id="#name"><br><br>
+		<input type="text" id="#name" required><br><br>
 
 		<label for="email">Email*</label>
-		<input type="email" id="#email"><br>
+		<input type="email" id="#email" required><br>
 
-		<p>Gender*
-		<label for="gender"><input type="radio" id="#gender_m" name="gender">Male</label>
-		<label for="gender"><input type="radio" id="#gender_f" name="gender">Female</label>
+		<p>Gender* 
+		<label for="gender"><input type="radio" id="#gender_m" name="gender" required>Male</label>
+		<label for="gender"><input type="radio" id="#gender_f" name="gender" required>Female</label>
 		</p>
 
-		<label>Laptop Brands</label>
+		<label for="laptop">Laptop Brands</label>
 		<select id="#laptop">
 			<option value="apple">Apple</option>
 			<option value="asus">Asus</option>
@@ -28,16 +28,17 @@
 			
 		</select><br><br>
 
-		<label>Age*</label>
-		<input type="number" id="#age"><br><br>
+		<label for="age">Age*</label>
+		<input type="number" id="#age" required><br><br>
 
-		<label>DOB*</label>
-		<input type="date" id="#dob"><br><br>
+		<label for="dob">DOB*</label>
+		<input type="date" id="#dob" required><br><br>
 		
-		<label>Password*</label>
-		<input type="password" id="#password"><br><br>
+		<label for="password">Password*</label>
+		<input type="password" id="#password" required><br><br>
 
-		<input type="url" id="portfolio"><br><br>
+		<label for="portfolio"><input type="url" id="portfolio" required></label>
+		<br><br>
 
 		<button type="button">Submit</button>
 		
