--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 		<input name="text" id="#name" required><br><br>
 
 		<label for="email">Email*</label>
-		<input type="email" id="#email" required><br>
+		<input name="email" id="#email" required><br>
 
 		<p>Gender* 
 		<label for="gender"><input type="radio" id="#gender_m" name="gender" required>Male</label>
@@ -22,6 +22,7 @@
 
 		<label for="laptop">Laptop Brands</label>
 		<select id="#laptop">
+			<option value="select">--Select--</option>
 			<option value="apple">Apple</option>
 			<option value="asus">Asus</option>
 			<option value="hp">HP</option>
@@ -29,15 +30,15 @@
 		</select><br><br>
 
 		<label for="age">Age*</label>
-		<input type="number" id="#age" required><br><br>
+		<input name="number" id="#age" required><br><br>
 
 		<label for="dob">DOB*</label>
-		<input type="date" id="#dob" required><br><br>
+		<input name="date" id="#dob" required><br><br>
 		
 		<label for="password">Password*</label>
-		<input type="password" id="#password" required><br><br>
+		<input name="password" id="#password" required><br><br>
 
-		<label for="portfolio"><input type="url" id="portfolio" required></label>
+		<label for="portfolio"><input name="url" id="portfolio" required></label>
 		<br><br>
 
 		<button type="button">Submit</button>
