--- a/main.html
+++ b/main.html
@@ -10,14 +10,14 @@
 	<!-- the entire body must be written by student -->
 	<form method="post">
 		<label for="name">Name*</label>
-		<input name="text" id="#name" required><br><br>
+		<input name="text" id="name" required><br><br>
 
 		<label for="email">Email*</label>
-		<input name="email" id="#email" required><br>
+		<input name="email" id="email" required><br>
 
 		<p>Gender* 
-		<label for="gender"><input type="radio" id="#gender_m" name="gender" required>Male</label>
-		<label for="gender"><input type="radio" id="#gender_f" name="gender" required>Female</label>
+		<label for="gender"><input type="radio" id="gender_m" name="gender" required>Male</label>
+		<label for="gender"><input type="radio" id="gender_f" name="gender" required>Female</label>
 		</p>
 
 		<label for="laptop">Laptop Brands</label>
@@ -30,13 +30,13 @@
 		</select><br><br>
 
 		<label for="age">Age*</label>
-		<input name="number" id="#age" required><br><br>
+		<input name="number" id="age" required><br><br>
 
 		<label for="dob">DOB*</label>
-		<input name="date" id="#dob" required><br><br>
+		<input name="date" id="dob" required><br><br>
 		
 		<label for="password">Password*</label>
-		<input name="password" id="#password" required><br><br>
+		<input name="password" id="password" required><br><br>
 
 		<label for="portfolio"><input name="url" id="portfolio" required></label>
 		<br><br>
