--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 		</p>
 
 		<label for="laptop">Laptop Brands</label>
-		<select id="#laptop">
+		<select id="#laptop" name="laptop">
 			<option value="select">--Select--</option>
 			<option value="apple">Apple</option>
 			<option value="asus">Asus</option>
