--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 
 		<label for="laptop">Laptop Brands</label>
 		<select id="#laptop" name="laptop">
-			<option value="select">--Select--</option>
+			<option value="select">--Select Laptop--</option>
 			<option value="apple">Apple</option>
 			<option value="asus">Asus</option>
 			<option value="hp">HP</option>
