--- a/main.html
+++ b/main.html
@@ -10,10 +10,10 @@
 	<!-- the entire body must be written by student -->
 	<form method="post">
 		<label for="name">Name*</label>
-		<input name="text" id="name" required><br><br>
+		<input name="text" id="#name" required><br><br>
 
 		<label for="email">Email*</label>
-		<input name="email" id="email" required><br>
+		<input name="email" id="#email" required><br>
 
 		<p>Gender* 
 		<label for="gender"><input type="radio" id="gender_m" name="gender" required>Male</label>
@@ -21,7 +21,7 @@
 		</p>
 
 		<label for="laptop">Laptop Brands</label>
-		<select id="laptop" name="laptop">
+		<select id="#laptop" name="laptop">
 			<option value="select">--Select Laptop--</option>
 			<option value="apple">Apple</option>
 			<option value="asus">Asus</option>
@@ -30,18 +30,18 @@
 		</select><br><br>
 
 		<label for="age">Age*</label>
-		<input name="number" id="age" required><br><br>
+		<input name="number" id="#age" required><br><br>
 
 		<label for="dob">DOB*</label>
-		<input name="date" id="dob" required><br><br>
+		<input name="date" id="#dob" required><br><br>
 		
 		<label for="password">Password*</label>
-		<input name="password" id="password" required><br><br>
+		<input name="password" id="#password" required><br><br>
 
-		<label for="portfolio"><input name="url" id="portfolio" required></label>
+		<label for="portfolio"><input name="url" id="#portfolio" required></label>
 		<br><br>
 
-		<button type="button">Submit</button>
+		<input type="button" value=Submit>
 		
 	</form>
 	
