--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
 		<label for="portfolio"><input name="url" id="portfolio" required></label>
 		<br><br>
 
-		<input type="button" value=Submit>
+		<input type="submit" value=Submit>
 		
 	</form>
 	
