--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
 		<label for="portfolio"><input name="url" id="portfolio" required></label>
 		<br><br>
 
-		<button input type="button" >Submit</button>
+		<button type="button" >Submit</button>
 		
 	</form>
 	
