--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
 		<label for="portfolio"><input name="url" id="portfolio" required></label>
 		<br><br>
 
-		<label for="submit"><button type="button" name="submit" id="submit" >Submit</button></label>
+		<button type="submit" name="submit" id="submit" >Submit</button>
 		
 	</form>
 	
