--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
 		<label for="password">Password*</label>
 		<input name="password" id="password" required><br><br>
 
-		<label for="portfolio"><input name="url" id="portfolio" required></label>
+		<label for="portfolio"><input type="url" id="portfolio" required></label>
 		<br><br>
 
 		<button type="submit" name="submit" id="submit" >Submit</button>
